--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,85 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
+  .app {
+    @apply flex flex-col items-center;
+  }
+  .container {
+    @apply lg:w-4/6 mb-10 w-full;
+  }
+  .search-container {
+    @apply rounded-lg flex items-center search-field-bg h-44 w-full mb-10;
+  }
+  .search-wrapper {
+    @apply w-full px-3;
+  }
+  .search-field {
+    @apply relative inline-block w-full;
+  }
+  .search-field-input {
+    @apply bg-green-100 border-[#838383] border w-full h-16 px-3 bg-opacity-0 outline-transparent pl-8;
+  }
+  .search-field-span {
+    @apply absolute inset-y-5 left-0 text-[#838383] pl-2;
+  }
+
   .btn-primary {
-    @apply border-solid border-blue-500 bg-pink-300;
+    @apply border border-white py-1 sm:px-4 px-1 cursor-pointer;
+  }
+  .btn-sm-title {
+    @apply hidden sm:inline;
+  }
+  .btn-title {
+    @apply flex;
+  }
+
+  .pagination {
+    @apply flex justify-between lg:px-0 px-3 text-[#d4cfcd];
+  }
+  .btn-pag-visible {
+    @apply btn-pag sm:w-44 w-20;
+  }
+  .btn-pag-hidden {
+    @apply sm:w-44 w-20 bg-[#8b8b8b] opacity-30 text-white;
+  }
+  .pag-results {
+    @apply flex items-center justify-center text-[#afafaf];
+  }
+  .card {
+    @apply flex lg:px-0 px-3 mt-10;
+  }
+  .card ul {
+    @apply w-full md:grid md:grid-cols-2 md:gap-4;
+  }
+  .card-item {
+    @apply flex flex-row shadow-lg rounded-lg mb-5 bg-[#434246] w-full sm:h-56 h-32 hover:shadow-2xl sm:hover:bg-[#535552] transition transform  md:hover:-translate-y-1 motion-reduce:transition-none motion-reduce:hover:transform-none;
+  }
+  .card-item-avatar {
+    @apply items-center overflow-hidden sm:w-44 w-24 sm:h-56 h-32 shrink-0;
+  }
+  .card-item-avatar img {
+    @apply shadow rounded align-middle border-none;
+  }
+  .card-item-details {
+    @apply flex flex-col w-full;
+  }
+  .card-item-details-name {
+    @apply flex items-center justify-center w-full h-12 bg-[#545257] rounded-tr-lg rounded-br-lg text-[#d4cfcd] px-2;
+  }
+  .card-item-details-info {
+    @apply flex flex-col justify-center pl-3 h-full text-[#c4bebc];
   }
 }
 
 @layer base {
-  html,
+  html {
+  }
   body {
+    @apply font-raleway !important;
   }
 }
 
@@ -21,9 +90,78 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(47, 47, 63);
+  background: linear-gradient(
+    90deg,
+    rgba(47, 47, 63, 1) 0%,
+    rgba(46, 51, 43, 1) 100%
+  );
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.search-field-bg {
+  background: rgb(152, 89, 37);
+  background: radial-gradient(
+    circle,
+    rgba(152, 89, 37, 0.6979166666666667) 0%,
+    rgba(72, 80, 67, 0.7679446778711485) 100%
+  );
+}
+
+.btn-pag {
+  line-height: 40px;
+  height: 40px;
+  text-align: center;
+  width: 100px;
+  cursor: pointer;
+  color: #fff;
+  transition: all 0.3s;
+  position: relative;
+}
+.btn-pag span {
+  transition: all 0.3s;
+}
+.btn-pag::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(255, 255, 255, 0.5);
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+  transform: scale(0.1, 1);
+}
+.btn-pag:hover span {
+  letter-spacing: 2px;
+}
+.btn-pag:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+.btn-pag::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.3s;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.btn-pag:hover::after {
+  opacity: 0;
+  transform: scale(0.1, 1);
 }
